--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "NODE_ENV=production node dist/index.js",
     "build": "rm -rf dist && tsc",
     "dev": "nodemon",
+    "test": "jest",
     "ts": "ts-node"
   },
   "_moduleAliases": {
@@ -17,13 +18,16 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^16.9.6",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
     "eslint": "^7.32.0",
+    "jest": "^27.2.1",
     "nodemon": "^2.0.12",
     "prettier": "^2.4.1",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.3"
