--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@": "dist"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/module-alias": "^2.0.1",
@@ -35,6 +36,9 @@
   "dependencies": {
     "axios": "^0.21.4",
     "cheerio": "^1.0.0-rc.10",
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "joi": "^17.4.2",
+    "module-alias": "^2.2.2"
   }
 }
