--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/jest": "^27.0.2",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^16.9.6",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
     "eslint": "^7.32.0",
@@ -39,6 +41,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.4.2",
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "swagger-ui-express": "^4.1.6",
+    "yamljs": "^0.3.0"
   }
 }
