--- a/vercel.json
+++ b/vercel.json
@@ -10,12 +10,15 @@
     },
     {
       "src": "dist/index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["dist/**"]
+      }
     }
   ],
   "routes": [
     {
-      "src": "/*",
+      "src": "/(.*)",
       "dest": "/dist/index.js"
     }
   ]
