--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "Thanh Vu <misa198>",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=production node dist/index.js",
-    "build": "rm -rf dist && tsc",
+    "start": "node dist/index.js",
+    "build": "rm -rf dist && tsc && cp -R src/docs dist",
     "dev": "nodemon",
     "test": "jest",
     "ts": "ts-node"
