--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "heroku-awake": "^1.0.10",
     "joi": "^17.4.2",
     "swagger-ui-express": "^4.1.6",
     "yamljs": "^0.3.0"
