--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "rm -rf dist && tsc && cp -R src/docs dist",
+    "build": "rm -rf dist && tsc",
     "dev": "nodemon",
     "test": "jest",
     "ts": "ts-node"
